--- a/NTNU GO/app/src/main/AndroidManifest.xml
+++ b/NTNU GO/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
     android:versionCode="5"
     android:versionName="1.2.2">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:name="android.hardware.location.gps" />
+    <uses-permission android:name="android.hardware.location.gps" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
@@ -175,12 +177,6 @@
             android:theme="@style/AppTheme.Popup"
             android:screenOrientation="portrait" />
 
-        //Feedback in menu
-        <activity
-            android:name="lukelunix.ntnugo.feedback.FeedbackInMenu"
-            android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Popup"/>
     </application>
 
 </manifest>
